# msumastro

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE.rst  MANIFEST.in  README.rst  add_keyword_synonyms  add_times  appveyor.yml  astro_object.py  astrometry.py  calc_gain_read.py  ccd_characterization.py  conf.py  customlogger.py  feder.py  file_status_summary  fitskeyword.py  fix_int16.py  get_keyword_from_fits_header.sh  ha_airmass  header_item.py  image.py  image_collection.py  image_gen.py  index.rst  keyword_names.py  keyword_names.sh  keywords_are_present_in_file.sh  lat_long  make_wcstools  master_bias_dark.py  master_flat.py  output_file_name.sh  patch_headers.py  photometry.py  process_files  (+25 more)
.ropeproject/: globalnames  history  objectdb
docs/: Makefile  astrometry.rst  ccd_characterization.rst  conf.py  feder.rst  feder_processing.rst  fitskeyword.rst  image.rst  image_collection.rst  image_management.rst  image_processing.rst  index.rst  installation.rst  overview.rst  patch_headers.rst  quick_add_keys_to_file.rst  reduction.rst  rtd-pip-requirements  scripts.rst  triage_fits_files.rst  xref.rst
msumastro/: __init__.py  _version.py  calc_gain_read.py  ccd_characterization.py  conftest.py  customlogger.py  fix_int16.py  image.py  image_collection.py  image_gen.py  image_grouper.py  patch_headers.py  quick_add_keys_to_file.py  run_astrometry.py  run_patch.py  run_standard_header_process.py  run_triage.py  table_tree.py  version.py
scripts/: quick_add_keys_to_file.py  run_astrometry.py  run_patch.py  run_triage.py
tests/: test_astro_object.py  test_ccd_characterization.py  test_feder.py  test_fitskeyword.py  test_image_collection.py  test_patch_headers.py  test_reduction.py  test_scripts.py  utilities.py  (+1 more)
(+54 files in other folders)
