[metadata]
name = msumastro
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
author = Matt Craig
author_email = mattwcraig@gmail.com
description = Process FITS files
long_description = This software was developed primarily to process the files coming off the Paul P. Feder Observatory at Minnesota State University Moorhead.
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://github.com/mwcraig/msumastro
edit_on_github = False
github_project = stellarphot/stellarphot
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: OnlY
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
install_requires =
    astropy
    ccdproc
    numpy
python_requires = >=3.7
setup_requires = setuptools_scm
zip_safe = False
use_2to3 = False
packages = find:
include_package_data = True

[options.extras_require]
docs =
    numpydoc
    sphinx-argparse
    sphinx_rtd_theme
    sphinx-astropy
tests =
    pytest-astropy

[options.entry_points]
console_scripts =
    hello-world = timmins:hello_world
    quick_add_keys_to_file.py = msumastro.scripts.quick_add_keys_to_file:main
    run_patch.py = msumastro.scripts.run_patch:main
    run_astrometry.py = msumastro.scripts.run_astrometry:main
    run_triage.py = msumastro.scripts.run_triage:main
    run_standard_header_process.py = msumastro.scripts.run_standard_header_process:main
    sort_files.py = msumastro.scripts.sort_files:main

[coverage:run]
omit =
    *__init__*
    */test_*
    setup.py
    msumastro/tests/data.py
    msumastro/conftest.py
branch = True
